--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@ckb-ccc/connector-react": "^1.0.5",
     "@ckb-ccc/lumos-patches": "^1.0.5",
     "@ckb-ccc/spore": "^1.0.5",
+    "antd": "^5.23.0",
     "buffer": "link:@spore-sdk/helpers/buffer",
     "next": "14.2.18",
     "react": "^18",
